[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "storytelling-dataviz-gim"
version = "2.0.1"
description = "Interactive teaching app for Storytelling using Data Visualization"
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [{ name = "Dr. Alok Tiwari" }]
dependencies = [
  "streamlit>=1.58,<1.59",
  "pandas>=2.2,<3.0",
  "numpy>=1.26,<3.0",
  "plotly>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<7.0",
  "ruff>=0.9,<1.0",
]

[tool.setuptools]
py-modules = ["app"]

[tool.setuptools.packages.find]
include = ["modules*"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --maxfail=1"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 110
exclude = [".venv", "venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
